--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ defaults:
       layout: single
       author_profile: false
       read_time: true
-      comments: true
+      comments: false
       share: true
       related: true
   # _pages
@@ -110,6 +110,8 @@ defaults:
 category_archive:
   type: liquid
   path: /categories/
+  author_profile: false
 tag_archive:
   type: liquid
   path: /tags/
+  author_profile: false
