--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ twitter_username: username
 github_username: username
 minimal_mistakes_skin: default
 search: true
+logo: "/assets/images/bio-photo.jpg"
 
 # Build settings
 markdown: kramdown
