--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: ''
+title: MDIO - Multi Dimensional Input Output
 email:
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Fast energy data storage architecture for AI, ML and HPC cloud native workflows
 twitter_username: username
 github_username: username
 minimal_mistakes_skin: default
@@ -90,16 +88,16 @@ footer:
 
 defaults:
   # _posts
-  - scope:
-      path: ""
-      type: posts
-    values:
-      layout: single
-      author_profile: false
-      read_time: true
-      comments: false
-      share: true
-      related: true
+  #- scope:
+  #    path: ""
+  #    type: posts
+  #  values:
+  #    layout: single
+  #    author_profile: false
+  #    read_time: true
+  #    comments: false
+  #    share: true
+  #    related: true
   # _pages
   - scope:
       path: "_pages"
@@ -108,11 +106,11 @@ defaults:
       layout: single
       author_profile: false
 
-category_archive:
-  type: liquid
-  path: /categories/
-  author_profile: false
-tag_archive:
-  type: liquid
-  path: /tags/
-  author_profile: false
+#category_archive:
+#  type: liquid
+#  path: /categories/
+#  author_profile: false
+#tag_archive:
+#  type: liquid
+#  path: /tags/
+#  author_profile: false
