--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MDIO - Multi Dimensional Input Output
+title: Multi Dimensional Input Output
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   Fast energy data storage architecture for AI, ML and HPC cloud native workflows
